code/tui/snapshots/fullscreen/frame/chat_progress_with_notice.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: working
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ Working... · 0s · ctrl+c to interrupt                                         
                                                               Copied 42 chars  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
  Enter queue  ·  shift+tab mode  ·  shift+↓/↑ effort
