code/tui/snapshots/fullscreen/frame/clipboard_image_pasted_into_chat_input.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered_after_paste
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > [Image #1]                                                                  
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
