code/tui/snapshots/fullscreen/frame/completed_update_notice.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                Ash 1.2.3 is ready · restart to use the update  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
