code/tui/snapshots/fullscreen/frame/config_general_tab.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 21)"
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── 配 置  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   通 用     提 供 商     议 题     网 络                                         │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 配 置                                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Vim 模 式                                                         关 闭    │             
            │  显 示 使 用 技 巧                                                     开 启    │             
            │  内 存 诊 断                                                         关 闭  + │             
            │  自 动 更 新                                                         最 新    │             
            │  以 差 异 显 示  Git 更 改                                              关 闭  + │             
            │  语 言                                                             中 文    │             
            │> 状 态 栏 风 格                                                       简 洁  + │             
  ──────────│  9 more below                                                           │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter change · r reset · ←/→ details · Tab tabs · / search · Esc close
