code/tui/snapshots/fullscreen/frame/dictation_model_downloading_zh.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                   [仪 表 盘 ]  
                                                                                
> /voice                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  听 写  · 正 在 下 载  encoder.onnx： 2.0 MiB · ctrl+c 停 止 听 写                        
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
  ⏸ 手 动                                                                         
  Enter 发 送   ·  shift+tab 模 式   ·  shift+↓/↑ 思 考
